CHANGES

1.0-beta6:

	* translate amount_fiat header even if ec pref "show history rates" unchecked
	* new menu item: "open blockexplorer to payment tx"
	* batch "mark_read" actions through reddit api
	* don't use send to many when "pay..."ing only 1 tip (so amount can then be edited on send tab)
	* better tipUpdated implementation (less flickering und sort-screwing)
	* parse claimed/returned messages
	* new column "Acceptance Status" (can be linked, not yet linked, claimed, returned)
	* allow u/chaintip <currency_symbol><decimal> (exmaple: "u/chaintip $1")
	* new menu item "mark_read (including claim/return messages)"
	* setting to "Disallow autopay if the user has already linked a wallet."

1.0-beta5:

	* fix parser again 

1.0-beta4:

	* TipList: new column "amount (fiat)"
	* remove all <quantity_alias>es except "a" and "an"
	* fix parser to catch correct relay address in case of unlinked recipients

1.0-beta3:

	* remove "qrelay" prefix requirement when parsing chaintip messages

1.0-beta2:

	* gui: improve "show amount monikers"
	* tip comment parser: don't require leading "/" before "u/chaintip" 
	* wait for wallet to sync on activation
	* fix bug with "disallow autopay when default amount used" always disallowing
	* refresh tips on settings change
	* add new column "subreddit" showing subreddit of tipping comment
	* whacky hackjob using sleep() to lessen the double-spend problem
	* fixed: mark read takes forever and locks the gui